--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "dependencies": {
     "glamor": "^2.20.40",
+    "npm": "^6.0.0",
     "react": "^16.3.2",
     "react-dom": "^16.2.0",
+    "react-flexbox-grid": "^2.1.0",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1"
