--- a/package.json
+++ b/package.json
@@ -1,22 +1,27 @@
 {
-  "name": "eportfolio",
+  "name": "react-eportfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "glamor": "^2.20.40",
-    "npm": "^6.14.6",
-    "react": "^16.3.2",
-    "react-dom": "^16.13.1",
-    "react-flexbox-grid": "^2.1.0",
-    "react-router": "^4.2.0",
-    "react-router-dom": "^4.2.2",
-    "react-scripts": "^3.4.1"
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "5.0.1",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
   "browserslist": {
     "production": [
