--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://LorenzoLim.github.io/react-eportfolio",
   "name": "react-eportfolio",
   "version": "0.1.0",
   "private": true,
